# job-scraper

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml  tasks.md
.github/workflows/: chatgpt-review.yaml  gemini-review.yml  run-tests.yml
matchai/: config.py  main.py  scheduled_runner.py  utils.py
matchai/cv/: extractor.py  parser.py
matchai/db/: __init__.py  candidates.py  connection.py
matchai/embeddings/: __init__.py  fastembed_client.py  pinecone_client.py
matchai/explainer/: generator.py
matchai/jobs/: database.py  embeddings.py  ingest.py  preprocessor.py
matchai/matching/: filter.py  ranker.py
matchai/schemas/: candidate.py  job.py  match.py
matchai/services/: __init__.py  email_service.py  ingest_service.py  match_service.py
scripts/: deploy-gcp.sh
tests/: conftest.py  test_candidates_cache.py  test_cv_extractor.py  test_cv_parser.py  test_database.py  test_e2e.py  test_email_service.py  test_embeddings.py  test_explainer.py  test_filter.py  test_ingest.py  test_preprocessor.py  test_ranker.py  test_schemas.py  test_utils.py
