[project]
name = "matchai"
version = "0.1.0"
description = "A local, zero-cost job matching system that ranks positions based on CV analysis"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "spacy>=3.7.0",
    "rapidfuzz>=3.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
matchai = "matchai.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
